[package]
name = "danawa_price"
version = "0.1.0"
authors = ["B4TT3RY <gb4tt3ry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
unhtml = { version = "0.7.5", features = ["derive"] }
serde = { version = "1.0.115", features = ["derive"] }
num-format = "0.4.0"
config = "0.9"
toml = "0.5.6"